<resources>
    <string name="error">ERROR&#8230;</string>
    <string name="pref_zoomctrl_summary">Position of buttons on the screen</string>
    <string name="pref_zoomctrl">Zoom buttons</string>
    <string name="pref_screen_orientation">Screen Orientation</string>
    <string name="pref_screen_orientation_summary">Choose the screen orientation</string>
    <string name="pref_googlelanguagecode_summary">Localisation of Google Map</string>
    <string name="pref_googlelanguagecode">Google Map language code</string>
    <string name="pref_hidepoi_summary">Dont show POI icons on the map</string>
    <string name="pref_hidepoi">Hide POI</string>
    <string name="prefcat_main_poi">POI</string>
    <string name="pref_northdirectionup_summary">Turn map on the northern direction</string>
    <string name="pref_northdirectionup">Direction on the North</string>
    <string name="pref_drivingdirectionup_summary">Turn the map in driving direction</string>
    <string name="pref_drivingdirectionup">Driving direction up</string>
    <string name="pref_zoomminlevel_summary">Set this zoom level at long press on minus button</string>
    <string name="pref_zoomminlevel">Favourite min zoom</string>
    <string name="pref_zoommaxlevel_summary">Set this zoom level at long press on plus button</string>
    <string name="pref_zoommaxlevel">Favourite max zoom</string>
    <string name="prefcat_main_misc">Misc</string>
    <string name="pref_accuracy_summary">Show blue disk indicator like Google Map</string>
    <string name="pref_accuracy">Accuracy indicator</string>
    <string name="pref_keepscreenon_summaryoff">Screen will be automatically turned off in case of inactivity</string>
    <string name="pref_keepscreenon_summary">Screen will not be turned off while you see map</string>
    <string name="pref_keepscreenon">Keep the screen on</string>
    <string name="pref_showtitle_summary">Hide window title with map name and etc</string>
    <string name="pref_showtitle">Show window title</string>
    <string name="pref_showstatusbar_summary">Hide status bar in map mode</string>
    <string name="pref_showstatusbar">Show status bar</string>
    <string name="pref_turnoffautoreindex">Switch off auto reindexing</string>
    <string name="pref_turnoffautoreindex_summary">Switch off check of the size and datetime map files</string>
    <string name="pref_gpsfastupdate">Fast update GPS data</string>
    <string name="pref_gpsfastupdate_summary">Slow updating saves the battery theoretically</string>
    <string name="pref_usermap_enabled">Enabled map</string>
    <string name="pref_usermap_enabled_summary">Add map to maps list</string>
    <string name="pref_usermap_name">Name</string>
    <string name="pref_usermap_baseurl">Base URL</string>
    <string name="pref_usermap_projection">Projection</string>
    <string name="pref_usermap_traffic">Yandex.Traffic</string>
    <string name="pref_usermap_traffic_summary">Show traffic info by Yandex</string>
    <string name="prefcat_main_look">Look &amp; Feel</string>
    <string name="prefcat_main_maps">Maps</string>
    <string name="prefcat_main_indexing">Indexing</string>
    <string name="pref_main_maps">Predefined Maps</string>
    <string name="pref_main_maps_summary">Internet connection is required</string>
    <string name="pref_main_usermaps">User defined maps</string>
    <string name="pref_main_usermaps_summary">Maps from /sdcard/rmaps/maps</string>
    <string name="prefcat_main_predefinedmaps">Maps</string>
    <string name="prefcat_main_predefinedoverlays">Overlays</string>
    <string name="btn_clear_cache_title">Clear cache</string>
    <string name="pref_internalcache_title">Internal cache</string>
    <string name="pref_internalcache_summary">Used for temp storage map tiles. Size: %dKB/4MB</string>
    <string name="pref_index_title">Index database</string>
    <string name="pref_index_summary">Tiles index of offline maps. Size: %dKB</string>
    <string name="pref_showscalebar_summary">Show scale bar at left bottom corner</string>
    <string name="pref_showscalebar">Show scale bar</string>
    <string name="pref_units_summary">Distance, speed units</string>
    <string name="pref_units">Units</string>
    <string name="pref_onlinecacheclear">Online cache</string>
    <string name="pref_onlinecacheclear_summary">.sqlitedb* Size: %dKB</string>
    <string name="pref_googlescale">Tiles size factor</string>
    <string name="pref_googlescale_summary">Get enlarged tiles from Google. It is recommended to clear the cache after changing the parameter</string>
    <string name="pref_locale">UI Language</string>
    <string name="pref_locale_summary">UI language independent of system setting</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_mylocation">My location</string>
    <string name="menu_mapselector">Maps</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_addpoi">Add POI</string>
    <string name="menu_poilist">POI</string>
    <string name="menu_categorylist">Category</string>
    <string name="menu_import">Import</string>
    <string name="menu_deleteall">Delete All</string>
    <string name="menu_area_selector">Make available offline</string>
    <string name="no_traffic">On this zoom traffic info are unavailable</string>
    <string name="auto_follow_enabled">Auto-Follow Enabled</string>
    <string name="auto_follow_disabled">Auto-Follow Disabled</string>
    <string name="message_geodata_notavailable">Data on SD card is not available. Operation cannot be performed.</string>
    <string name="no_inet_conn">No internet connection&#8230;</string>
    <string name="no_items">Your search did not match any items</string>
    <string name="about_dialog_text">©2009 Robert.Developer\n
  Osmdroid by Nicolas Gramlich\n
  App icon by Everaldo Coelho\n
With the assistance of\n
  Dmytro Sandu\n
  Snake Joe\n
  Christoffer Blindheim\n
Translators\n
  Vitek Fedra CZ\n
  Blast IT\n
  Mike DE\n
All rights reserved\n
\n
Questions, sentences mail to robertk506@gmail.com\n
\n
How to and FAQ you can find on http://robertdeveloper.blogspot.com/\n</string>
    <string name="about_dialog_whats_new">What\'s new&#8230;</string>
    <string name="about_dialog_close">Close</string>
    <string name="search_label">Address:</string>
    <string name="search_hint">e.g. Abbey Road, London</string>
    <string name="message_gpsdisabled">GPS is disabled. Trying to use wireless network to determine your location&#8230;</string>
    <string name="message_locationunavailable">GPS and Network detection is disabled. Your current location is temporarily unavailable&#8230;</string>
    <string name="message_lastknownlocation">GPS and Network detection is disabled. Showing last known location&#8230;</string>
    <string name="message_corruptindex">You have corrupt index data. I recommend to clear index data in settings.</string>
    <string name="message_updateminmax">Update min max zoom data of map file&#8230;</string>
    <string name="message_saved">Item saved</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Revert</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_show">Show</string>
    <string name="PoiTitle">Title</string>
    <string name="PoiIcon">Icon</string>
    <string name="PoiCategoryTitle">Category</string>
    <string name="PoiLat">Latitude</string>
    <string name="PoiLon">Longitude</string>
    <string name="PoiDescr">Description</string>
    <string name="hidden">Hidden</string>
    <string name="hiddencategory">Hide POI of this category</string>
    <string name="menu_goto">Go to POI</string>
    <string name="FileName">Import from KML, GPX file</string>
    <string name="ToCategory">To category</string>
    <string name="SelectFile">Select file</string>
    <string name="Import">Import</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="MinZoom">Show poi since the zoom (0..23)</string>
    <string name="pref_trackwriter_mindistance_summary">Smallest distance between two recordings of your position</string>
    <string name="pref_trackwriter_mindistance">Min distance between points</string>
    <string name="pref_trackwriter_mintime_summary">Smallest time interval between two recordings of your position</string>
    <string name="pref_trackwriter_mintime">Min time between points</string>
    <string name="prefcat_main_trackwriter">Track writer</string>
    <string name="menu_toradar">To Radar</string>
    <string name="menu_exporttogpx">Export to GPX file</string>
    <string name="menu_exporttokml">Export to KML file</string>
    <string name="pref_onlinecache">Online maps cache</string>
    <string name="pref_onlinecache_summary">Store online maps tiles to sdcard</string>
    <string name="pref_dir">Directories</string>
    <string name="pref_dir_main">Main RMaps directory</string>
    <string name="pref_dir_maps">User maps directory</string>
    <string name="pref_dir_import">Import files directory</string>
    <string name="pref_dir_export">Export files directory</string>
    <string name="pref_dir_summary">Where RMaps stores your files</string>
    <string name="pref_crosshair">Crosshair on centre</string>
    <string name="pref_crosshair_summary">Show litle crosshair on centre of the map</string>
    <string name="pref_track_style">Track style</string>
    <string name="pref_track_style_summary">Track color, width, shadow color</string>
    <string name="pref_track_style_current">Recorded track style</string>
    <string name="pref_main_mixmaps">Custom maps</string>
    <string name="pref_main_mixmaps_summary">Map  + overlay, Custom map source</string>
    <string name="pref_overlay_button_visibility">Overlay button visibility</string>
    <string name="pref_overlay_button_visibility_summary">When show or hide overlay button</string>
    <string name="pref_overlay_button_behavior">Overlay button behavior</string>
    <string name="pref_overlay_button_behavior_summary">What to do on touch and long touch</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_name">By name</string>
    <string name="menu_sort_category">By category</string>
    <string name="menu_sort_coord">By coordinates</string>
    <string name="menu_sort_date">By date</string>
    <string name="pref_drawtilegrid">Tile grid</string>
    <string name="pref_drawtilegrid_summary">Show tiles grid with info</string>
    <string name="pref_line_gps">Line to GPS</string>
    <string name="pref_line_gps_summary">Show line between current GPS location and center of screen</string>
    <string name="menu_share">Share</string>
    <string name="menu_join">Join tracks</string>
    <string name="pref_circle_distance">Distance rings</string>
    <string name="pref_circle_distance_summary">Rings appear  around your location that show distance like scale indicator</string>
    <string name="pref_coordformat">Coordinates format</string>
    <string name="pref_coordformat_summary">Latitude, longitude format for display</string>
    <string name="pref_show_autofollow_button">Auto-Follow button</string>
    <string name="pref_show_autofollow_button_summary">Show auto-follow button on the screen</string>
    <string name="pref_use_volume_controls">Volume controls</string>
    <string name="pref_use_volume_controls_summary">Use volume controls to zooming the map</string>
    <string name="pref_person_icon">Location cursor</string>
    <string name="pref_arrow_icon">Direction cursor</string>
    <string name="pref_icon_summary">File from ..rmaps/icons/cursors/*.png</string>
</resources>