<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_gotopoi"
        android:title="@string/menu_goto">
    </item>
    <item
        android:id="@+id/menu_toradar"
        android:title="@string/menu_toradar">
    </item>
    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete">
    </item>
    <item
        android:id="@+id/menu_exportkml"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_exporttokml">
    </item>
    <item
        android:id="@+id/menu_exportgpx"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_exporttogpx">
    </item>

</menu>